[project]
name = "mmmm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.136.1",
    "granian>=2.7.4",
    "psycopg2-binary>=2.9.12",
    "pwdlib[argon2,bcrypt]>=0.3.0",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "pyjwt>=2.12.1",
    "python-dotenv>=1.2.2",
    "sentry-sdk>=2.58.0",
    "sqlalchemy>=2.0.49",
    "sqlmodel>=0.0.38",
    "tenacity>=9.1.4",
]

[dependency-groups]
dev = [
    "coverage>=7.13.5",
    "granian[reload]>=2.7.4",
    "prek>=0.3.11",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
    "ty>=0.0.32",
]

[tool.ruff]
exclude = ["alembic"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "ARG001", "T201"]
ignore = ["E501", "B008", "W191", "B904"]

[tool.coverage.run]
source = ["app"]
dynamic_context = "test_function"

[tool.coverage.report]
show_missing = true
sort = "-Cover"

[tool.coverage.html]
show_contexts = true

[tool.ty.terminal]
error-on-warning = true
